# http-to-kafka

./: .clang-format  .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  README.md
cmake/: FindCrypto.cmake
src/: CMakeLists.txt  config.json  json_config.hpp  kafka_writer.hpp  main.cc
test/: CMakeLists.txt  tests.cc
