CMAKE_MINIMUM_REQUIRED(VERSION 2.8.7 FATAL_ERROR)
PROJECT (http-to-kafka)
INCLUDE(ExternalProject)
SET(LIBPREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}")
SET(LIBSUFFIX "${CMAKE_STATIC_LIBRARY_SUFFIX}")
SET(HTTP_TO_KAFKA_VERSION_MAJOR 1)
SET(HTTP_TO_KAFKA_VERSION_MINOR 0)
SET(CMAKE_VERBOSE_MAKEFILE on)
SET(Boost_FIND_REQUIRED TRUE)
SET(Boost_DEBUG TRUE)
SET(Boost_USE_MULTITHREADED TRUE)
FIND_PACKAGE(Boost REQUIRED COMPONENTS
	iostreams
	filesystem
	date_time
	system
	program_options
	log
)
ADD_DEFINITIONS(-DBoost_USE_STATIC_LIBS=ON)
ADD_SUBDIRECTORY(src)
