cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
SET(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/install)
PROJECT (http-to-kafka)
ENABLE_TESTING()
INCLUDE(ExternalProject)
SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
SET(LIBPREFIX "${CMAKE_STATIC_LIBRARY_PREFIX}")
SET(LIBSUFFIX "${CMAKE_STATIC_LIBRARY_SUFFIX}")
SET(HTTP_TO_KAFKA_VERSION_MAJOR 1)
SET(HTTP_TO_KAFKA_VERSION_MINOR 0)
SET(CMAKE_VERBOSE_MAKEFILE on)
INCLUDE(FindOpenSSL)
INCLUDE(FindCrypto)
ADD_SUBDIRECTORY(src)